--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -48,7 +48,7 @@
        "Name: review_scores_rating, Length: 9684, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,28 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 119
     },
     "colab_type": "code",
-    "collapsed": true,
     "id": "H5ZijdxcR_fL",
     "outputId": "0f520d45-efa7-40b8-df7b-bee64d1776cf"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "Listings in north end: 347\n",
-      "North end is: Counter({'italian': 184, 'historic': 120, 'good': 90, 'old': 75, 'true': 53, 'entire': 45, 'great': 42, 'narrow': 41, 'fine': 31, 'famous': 29, 'amazing': 27, 'residential': 26, 'american': 26, 'public': 25, 'close': 23, 'european': 19, 'easy': 19, 'short': 18, 'rich': 16, 'fresh': 16, 'accessible': 16, 'authentic': 15, 'beautiful': 15, 'yummy': 14, 'friendly': 13, 'safe': 13, 'perfect': 13, 'favorite': 13, 'notable': 13, 'local': 12, 'delicious': 12, 'vibrant': 12, 'little': 9, 'homemade': 9, 'baked': 9, 'incredible': 9, 'convenient': 9, 'countless': 9, 'square': 8, 'historical': 8, 'young': 8, 'wonderful': 7, 'quiet': 7, 'right': 7, 'lively': 7, 'unbeatable': 7, 'charming': 7, 'unique': 6, 'cozy': 6, 'new': 6, 'sure': 6, 'popular': 6, 'small': 6, 'brief': 6, 'bountiful': 6, 'breathtaking': 6, 'plenty': 6, 'colonial': 6, 'central': 5, 'colorful': 5, 'green': 5, 'walkable': 5, 'main': 5, 'endless': 4, 'ideal': 4, 'modern': 4, 'quaint': 4, 'key': 4, 'beloved': 4, 'nice': 4, 'fun': 4, 'major': 4, 'open': 4, 'early': 4, 'busy': 3, 'outdoor': 3, 'prime': 3, 'detailed': 3, 'overall': 3, 'quick': 3, 'sized': 3, 'culinary': 3, 'a.k.a': 3, 'hungry': 3, 'tiny': 3, 'entertaining': 3, 'north': 3, 'large': 3, 'hot': 3, 'plush': 2, 'distinct': 2, 'apt': 2, 'big': 2, 'quirky': 2, 'able': 2, 'significant': 2, 'direct': 2, 'orange': 2, 'renowned': 2, 'bustling': 2, 'alive': 2, 'striking': 2, 'energetic': 2, 'unmatched': 2, 'humble': 2, 'red': 2, 'delectable': 2, 'high': 2, 'free': 2, 'picturesque': 2, 'long': 2, 'veggie': 2, 'personal': 2, 'flat': 2, 'cherished': 2, 'nearby': 2, 'british': 2, '19th': 2, 'fantastic': 2, 'gorgeous': 2, 'romantic': 2, 'warm': 2, '17th': 1, '18th': 1, 'late': 1, 'international': 1, 'southern': 1, 'lite': 1, 'available': 1, 'cute': 1, 'live': 1, 'pink': 1, 'medical': 1, 'premier': 1, 'indelible': 1, 'particular': 1, 'private': 1, 'hidden': 1, 'cheery': 1, 'plentiful': 1, 'doorstep!.': 1, 'straight': 1, 'happy': 1, 'numerous': 1, 'recent': 1, 'trendy': 1, 'intimate': 1, 'less': 1, 'ficial': 1, 'reasonable': 1, 'exposed': 1, 'wooden': 1, 'comfortable': 1, 'monthly': 1, 'ample': 1, 'contemporary': 1, 'timey': 1, 'electric': 1, 'comparable': 1, 'abundant': 1, 'tasty': 1, 'permanent': 1, 'different': 1, 'jewish': 1, 'pasty': 1, 'furnished': 1, 'distinguished': 1, 'laundry': 1, 'lantern': 1, 'infamous': 1, 'touristy': 1, 'organic': 1, 'urban': 1, 'downtown': 1, 'multiple': 1, 'touristic': 1, 'typical': 1, 'effortless': 1, 'mexican': 1, 'food-': 1, 'cobble': 1, 'hard': 1, 'complete': 1, 'memorable': 1, 'eccentric': 1, 'boisterous': 1, 'quieter': 1, 'functional': 1, 'oversized': 1, 'excellent': 1, 'loud': 1, 'iconic': 1, 'tall': 1, 'mere': 1, 'secured': 1, 'prestigious': 1, 'gay': 1, 'chic': 1, 'interested': 1, 'interesting': 1, 'waterfront': 1, 'prepared': 1, '-christoph': 1, '-theater': 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "from itertools import chain\n",
@@ -155,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -191,15 +180,7 @@
     "id": "oYM0cRdEZ9kv",
     "outputId": "8df86a07-27e3-481c-b7c4-8d5249739483"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Len total = 794377\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -227,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +228,7 @@
     "\n",
     "# calc_neighborhood_accuracy(comments_list) takes in a list of strings as the comments\n",
     "# for that listing. It returns a scalar neighborhood accuracy score.\n",
-    "def calc_neighborhood_accuracy(neighborhood_adjectives, comments_list):\n",
+    "def calc_neighborhood_accuracy(neighborhood_adjectives, neighborhood_frequencies, comments_list):\n",
     "  neighborhood_accuracy = 0\n",
     "\n",
     "  # Comments, excluding punctuation and special characters\n",
@@ -260,14 +241,14 @@
     "  # Dot product time doo doo doo doo doo\n",
     "  for i in range(len(neighborhood_adjectives)):\n",
     "    if (neighborhood_adjectives[i] in comment_words):\n",
-    "      neighborhood_accuracy += frequencies[i] * comment_freq[neighborhood_adjectives[i]]\n",
+    "      neighborhood_accuracy += neighborhood_frequencies[i] * comment_freq[neighborhood_adjectives[i]]\n",
     "\n",
     "  neighborhood_accuracy /= len(comments_list)\n",
     "\n",
     "  return neighborhood_accuracy\n",
     "\n",
     "# Calculates the mean sentiment of all reviews for a listing.\n",
-    "def calc_happiness(comments_list):\n",
+    "# def calc_happiness(comments_list):\n",
     "  "
    ]
   },
@@ -280,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -306,7 +287,7 @@
     "        continue\n",
     "\n",
     "      # Neighborhood accuracy metric (\"Consistency\")\n",
-    "      consistency = calc_neighborhood_accuracy(adjectives, comments_list)\n",
+    "      consistency = calc_neighborhood_accuracy(adjectives, frequencies, comments_list)\n",
     "\n",
     "      # Average rating (\"Enjoyability\")\n",
     "      enjoyability = df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating'].values[0]\n",
@@ -329,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -404,9 +385,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:vibe-of-boston] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-vibe-of-boston-py"
   },
   "language_info": {
    "codemirror_mode": {
